--- a/index.html
+++ b/index.html
@@ -39,40 +39,40 @@
     <header class="headerIndex">
         <h1>La Parrilla del Abuelo</h1>
         <p>Una parrilla tradicional Argentina</p>
-        <a class="btn" href="">RESERVAR</a>
+        <a class="btn" href="./pages/reserva.html">RESERVAR</a>
     </header>
 
-    <main class="MainIndex">
+    <main class="mainIndex">
         <section classt="tarjetas">
             <div class="tarjeta1">
-                <img src="./assets/img/nuestra-historia.jpg" alt="Nosotros">
                 <div class="tarjeta1-nosotros">
                     <h2>Nuestra Historia</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem consequatur quisquam, pariatur sapiente iste dolorem, reprehenderit tempore, nihil dolores nemo harum quibusdam unde repellendus maxime aperiam accusamus laborum natus! Nesciunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia et tempore error neque. Explicabo odio consequatur at eius non sequi asperiores maiores nesciunt nobis fuga. Eaque earum deleniti molestiae quidem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta repudiandae dolor quae labore hic modi adipisci voluptatibus error deserunt nemo magni praesentium doloribus tenetur excepturi consequatur, perferendis, quia, facere autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem consequatur quisquam, pariatur sapiente iste dolorem, reprehenderit tempore, nihil dolores nemo harum quibusdam unde repellendus maxime aperiam accusamus laborum natus! Nesciunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia et tempore error neque. Explicabo odio consequatur at eius non sequi asperiores maiores nesciunt nobis fuga.</p>
                 </div>
+                <img src="./assets/img/nuestra-historia.jpg" alt="Nosotros">
             </div>
             <div class="tarjeta1">
                 <div class="tarjeta1-nosotros">
                     <h2>Nuestra Carne</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem consequatur quisquam, pariatur sapiente iste dolorem, reprehenderit tempore, nihil dolores nemo harum quibusdam unde repellendus maxime aperiam accusamus laborum natus! Nesciunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia et tempore error neque. Explicabo odio consequatur at eius non sequi asperiores maiores nesciunt nobis fuga. Eaque earum deleniti molestiae quidem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta repudiandae dolor quae labore hic modi adipisci voluptatibus error deserunt nemo magni praesentium doloribus tenetur excepturi consequatur, perferendis, quia, facere autem.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem consequatur quisquam, pariatur sapiente iste dolorem, reprehenderit tempore, nihil dolores nemo harum quibusdam unde repellendus maxime aperiam accusamus laborum natus! Nesciunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia et tempore error neque. Explicabo odio consequatur at eius non sequi asperiores maiores nesciunt nobis fuga.</p>
                 </div>
                 <img src="./assets/img/nuestra-carne.jpg" alt="NuestraCarne">
             </div>
             <div class="tarjeta1">
-                <img src="./assets/img/testimonios.jpg" alt="Testimonios">
                 <div class="tarjeta1-nosotros">
                     <h2>Testimonios</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ullam, libero minima natus veritatis dolor ut alias quidem. Unde, eos?</p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsam autem eveniet ratione fugiat dolores nulla molestias esse nesciunt tempora!</p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsam autem eveniet ratione fugiat dolores nulla molestias esse nesciunt tempora!</p>
                 </div>
+                <img src="./assets/img/testimonios.jpg" alt="Testimonios">
             </div>  
         </section>
     </main>
 
     <footer>
         <div class="pie">
-            <p>Copyright La Parrilla del Abuelo - 2023.Todos los derechos reservados</p>
+            <p>Copyright La Parrilla del Abuelo - 2023.Todos los derechos reservados.</p>
         </div>
         <div class="redes">
             <i class="fa-brands fa-whatsapp"></i>
