--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem consequatur quisquam, pariatur sapiente iste dolorem, reprehenderit tempore, nihil dolores nemo harum quibusdam unde repellendus maxime aperiam accusamus laborum natus! Nesciunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia et tempore error neque. Explicabo odio consequatur at eius non sequi asperiores maiores nesciunt nobis fuga.</p>
                 </div>
                 <img src="./assets/img/nuestra-historia.jpg" alt="Nosotros">
-            </div>
+            </div> 
             <div class="tarjeta1">
                 <div class="tarjeta1-nosotros">
                     <h2>Nuestra Carne</h2>
@@ -62,10 +62,9 @@
                 <div class="tarjeta1-nosotros">
                     <h2>Testimonios</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ullam, libero minima natus veritatis dolor ut alias quidem. Unde, eos?</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsam autem eveniet ratione fugiat dolores nulla molestias esse nesciunt tempora!</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsam autem eveniet ratione fugiat dolores nulla molestias esse nesciunt tempora!</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti suscipit voluptates, a voluptate quisquam distinctio quibusdam deleniti dolorem pariatur veniam cumque minima perspiciatis commodi tempora dolores doloribus quod? Quisquam, pariatur?</p>
                 </div>
-                <img src="./assets/img/testimonios.jpg" alt="Testimonios">
+                <img class="imagen3" src="./assets/img/testimonios.jpg" alt="Testimonios">
             </div>  
         </section>
     </main>
