--- a/pages/menu.html
+++ b/pages/menu.html
@@ -45,8 +45,43 @@
         <h3>Entradas</h3>
         <section class="tarjetas">
             <div class="tarjeta">
+                <img src="../assets/img/empanada.jpg" alt="empanada">
+                <p>Empanadas de carne</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/empanada-p.jpg" alt="Empanada-p">
+                <p>Empanadas de pollo</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/empanada-jyq.jpg" alt="Empanada-jyq">
+                <p>Empanadas de jamón y queso</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/palitos-queso.jpg" alt="palito-queso">
+                <p>Palitos de queso</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/morcilla.jpg" alt="morcilla">
+                <p>Morcilla</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/chorizo.jpg" alt="chorizo">
+                <p>Chorizo</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
                 <img src="../assets/img/empanada.jpg" alt="Empanada">
-                <p>Lorem ipsum dolor sit.</p>
+                <p>Empanadas de carne</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/empanada.jpg" alt="Empanada">
+                <p>Empanadas de carne</p>
                 <a href="">¡QUIERO!</a>
             </div>
         </section>
