--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,10 +4,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <link rel="shortcut icon" href="../assets/img/logo1.png" type="image/x-icon">
+    <title>El menú de la parrilla</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
+
 <body>
+    <nav class="navegador">
+        <div class="logo">
+            <a href="../index.html"><img src="../assets/img/logo2.png" alt="logo"></a>
+        </div>
+        <label for="check" class="checkbtn">
+            <i class="fa-solid fa-bars"></i>
+        </label>
+        <input type="checkbox" id="check">
+        <section class="navbar">
+            <ul>
+                <li><a href="../index.html">Nuestra Historia</a></li>
+                <li>
+                    <a href="./menu.html">Menú +</a>
+                    <ul>
+                        <li><a href="./menu.html">Entradas</a></li>
+                        <li><a href="./menu.html">Principales</a></li>
+                        <li><a href="./menu.html">Postres</a></li>
+                        <li><a href="./menu.html">Vinos</a></li>
+                    </ul>
+                </li>
+                <li><a href="./eventos.html">Eventos</a></li>
+                <li><a href="./reserva.html">Reserva</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
+            </ul>
+    </section>
+    </nav>
+
+    <header class="headerContacto">
+        <h2>CONTACTO</h2>
+    </header>
+
+    <main class="contacto">
+        <form class="formulario">
+            <div class="titulo">
+                <h2>C<span>ONTACTO</span></h2>
+            </div>
+            <label>
+                Nombre:
+                <input type="text" name="nombre" placeholder="Escriba su nombre" required>
+            </label>
+            <label>
+                Apellido:
+                <input type="text" name="apellido" placeholder="Escriba su apellido" required>
+            </label>
+            <label>
+                E-mail:
+                <input type="email" name="email" placeholder="Escriba su email" required>
+            </label>
+            <label>
+                Mensaje:
+                <textarea name="mensaje" placeholder="Escriba un mensaje"></textarea>
+            </label>
+            <button class="boton" type="submit">Enviar</button>
+        </form>
+    </main>
+
+
     
 </body>
 </html>
