--- a/pages/menu.html
+++ b/pages/menu.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La Parrilla del Abuelo</title>
+    <link rel="shortcut icon" href="../assets/img/logo1.png" type="image/x-icon">
+    <title>El menú de la parrilla</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
@@ -75,19 +76,128 @@
                 <a href="">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
-                <img src="../assets/img/empanada.jpg" alt="Empanada">
-                <p>Empanadas de carne</p>
+                <img src="../assets/img/mollejas.jpg" alt="mollejas">
+                <p>Mollejas</p>
                 <a href="">¡QUIERO!</a>
             </div>
             <div class="tarjeta">
-                <img src="../assets/img/empanada.jpg" alt="Empanada">
-                <p>Empanadas de carne</p>
+                <img src="../assets/img/chinchulines.jpg" alt="chinchulines">
+                <p>Chinchulines</p>
                 <a href="">¡QUIERO!</a>
             </div>
         </section>
 
+        <h3>Platos Principales</h3>
+        <section class="tarjetas">
+            <div class="tarjeta">
+                <img src="../assets/img/parrillada.jpg" alt="parrillada">
+                <p>Parrillada para compartir con guarnición</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/tira-de-asado.jpg" alt="tira-de-asado">
+                <p>Tira de asado con guarnición</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/bife-chorizo.jpg" alt="bife-chorizo">
+                <p>Bife de chorizo con guarnición</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/vacio.jpg" alt="vacio">
+                <p>Vacio con guarnición</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/cordero-trozos.jpg" alt="cordero">
+                <p>Trozos de filet de cordero con guarnición</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/brochetas.jpg" alt="brochetas">
+                <p>Brochetas de ternera con tomate</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/brochetas-pollo.jpg" alt="brochetas-pollo">
+                <p>Brochetas de pollo con pimentos</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/pollo.jpg" alt="pollo">
+                <p>Pollo asado con guarnición</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/chuleta-cerdo.jpg" alt="chuleta-cerdo">
+                <p>Chuletas de cerdo con guarnición</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/hamburguesa-pollo.jpg" alt="hamburguesa-pollo">
+                <p>Hamburguesa de pollo con guarnición</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/hamburguesa.jpg" alt="hamburguesa-queso">
+                <p>Hamburguesa doble con queso con guarnición</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/hamburguesa-lechuga-tomate.jpg" alt="hamburguesa-lechuga-tomate">
+                <p>Hamburguesa simple de lechuga y tomate con guarnición</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+        </section>
+        <h3>Postres</h3>
+        <section class="tarjetas">
+            <div class="tarjeta">
+                <img src="../assets/img/torta-ciruela-frambuesa.jpg" alt="torta-ciruela-frambuesa">
+                <p>Torta de ciruela y frambuesa</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/tarta-queso-gelatina.jpg" alt="tarta-queso-gelatina">
+                <p>Tarta de queso con gelatina de cereza</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/brownie.jpg" alt="brownie">
+                <p>Brownie de chocolate</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+            <div class="tarjeta">
+                <img src="../assets/img/mousse-chocolate.jpg" alt="mousse-chocolate">
+                <p>Mousse de chocolate</p>
+                <a href="">¡QUIERO!</a>
+            </div>            
+            <div class="tarjeta">
+                <img src="../assets/img/panqueque-frutillas.jpg" alt="panqueque-frutillas">
+                <p>Panqueque con frutilla y chocolate</p>
+                <a href="">¡QUIERO!</a>
+            </div>            
+            <div class="tarjeta">
+                <img src="../assets/img/flan.jpg" alt="flan">
+                <p>Flan con dulce de leche</p>
+                <a href="">¡QUIERO!</a>
+            </div>
+        </section>
 
     </main>
+
+    <footer>
+        <div class="pie">
+            <p>Copyright La Parrilla del Abuelo - 2023.Todos los derechos reservados.</p>
+        </div>
+        <div class="redes">
+            <i class="fa-brands fa-whatsapp"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-twitter"></i>
+        </div>
+    </footer>
 
 </body>
 </html>
