Terminando formulario contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -63,11 +63,22 @@
                 Mensaje:
                 <textarea name="mensaje" placeholder="Escriba un mensaje"></textarea>
             </label>
-            <button class="boton" type="submit">Enviar</button>
+            <input type="submit" class="boton" value="Enviar consulta">
         </form>
     </main>
-
-
+    
+    <footer>
+        <div class="pie">
+            <p>Copyright La Parrilla del Abuelo - 2023.Todos los derechos reservados.</p>
+        </div>
+        <div class="redes">
+            <i class="fa-brands fa-whatsapp"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-twitter"></i>
+        </div>
+    </footer>
     
 </body>
 </html>
