Pagina contacto resposive

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -39,7 +39,8 @@
     </nav>
 
     <header class="headerContacto">
-        <h2>CONTACTO</h2>
+        <h1>CONTACTO</h1>
+        <p>Tu comentario nos ayuda a mejorar y seguir creciendo</p>
     </header>
 
     <main class="contacto">
