--- a/pages/menu.html
+++ b/pages/menu.html
@@ -39,7 +39,8 @@
     </nav>
 
     <header class="headerMenu">
-        <h2>Menú</h2>
+        <h1>Menú</h1>
+        <p>Una carta especial para disfrutar con buena compañía</p>
     </header>
     
     <main class="mainMenu">
